--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: seoatiiit
-description: seoatiiit
+description: seoatiiit is a search engine optimization(SEO) contest held at IIIT Bhubaneswar.
 keywords: seoatiiit, advaita, seo ,iiit
 author: Shibasis Patel
 baseurl: "" # the subpath of your site, e.g. /blog/
