--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,7 @@ title: seoatiiit
 description: seoatiiit is a search engine optimization(SEO) contest held at IIIT Bhubaneswar.
 keywords: seoatiiit, advaita, seo ,iiit
 author: Shibasis Patel
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+baseurl: "" 
+url: "" 
+gems:
+  - jekyll-sitemap
